--- a/css/main.css
+++ b/css/main.css
@@ -8,25 +8,30 @@ html {
 
 .banner {
   position: relative;
+  overflow: hidden;
 }
 
 .banner-content {
   padding: 0 1rem;
   bottom: 1rem;
   max-width: 50em;
+  right: 0;
+  top: 0;
+  position: absolute;
 }
 
 h1 {
   font-family: "Open Sans", sans-serif;
   font-size: 4rem;
-  width: 50em;
+  font-style: bold;
+  list-style-type: none;
 }
 
 .img-flex {
   display: block;
   width: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  overflow: hidden;
+}
+
+p {
+  font-style: italic;
 }
