--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,22 @@ h1 {
   font-size: 4rem;
   font-style: bold;
   list-style-type: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  float: left;
+  width: 100%;
 }
 
 .img-flex {
   display: block;
   width: 100%;
+  max-height: 500px;
 }
 
 p {
   font-style: italic;
+  font-size: 2rem;
+  font-family: "Open Sans", sans-serif;
+  float: left;
+  width: 100%;
 }
