--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ h1 {
   font-size: 4rem;
   font-weight: bold;
   list-style-type: none;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, .5);
   color: #fff;
 }
 
