--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ html {
   transform: translateX(-50%);
 }
 
-h1 {
+h2 {
   font-family: "Open Sans", sans-serif;
   font-size: 4rem;
   font-weight: bold;
@@ -37,11 +37,12 @@ h1 {
 
 p {
   font-style: italic;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: "Open Sans", sans-serif;
   float: left;
 }
 
 body {
   padding: .1em;
+  margin: 0;
 }
