--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ html {
 .banner {
   position: relative;
   overflow: hidden;
+  padding-left: 1.5em;
+  text-align: left;
+  margin: 1.5;
 }
 
 .banner-content {
@@ -19,6 +22,7 @@ html {
   position: absolute;
   transform: translateX(-50%);
   width: 100%;
+  text-align: left
 }
 
 h2 {
@@ -38,8 +42,13 @@ h2 {
 
 p {
   font-style: italic;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-family: "Open Sans", sans-serif;
+  position: absolute;
+  width: 600px;
+  transform: translateX(-50%);
+  left: 48%;
+  bottom: .5em;
 }
 
 body {
