--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ html {
   overflow: hidden;
   padding-left: 1.5em;
   text-align: left;
-  margin: 1.5;
 }
 
 .banner-content {
@@ -22,7 +21,7 @@ html {
   position: absolute;
   transform: translateX(-50%);
   width: 100%;
-  text-align: left
+  text-align: left;
 }
 
 h2 {
