--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,7 @@ html {
 .banner {
   position: relative;
   overflow: hidden;
-  padding-left: 1.5em;
-  text-align: left;
+  overflow: hidden;
 }
 
 .banner-content {
@@ -21,7 +20,6 @@ html {
   position: absolute;
   transform: translateX(-50%);
   width: 100%;
-  text-align: left;
 }
 
 h2 {
@@ -31,12 +29,15 @@ h2 {
   list-style-type: none;
   background-color: rgba(0, 0, 0, .5);
   color: #fff;
+  margin-bottom: 1rem;
+  margin-left: 0;
+  margin-right: 0;
+  display: inline-block;
 }
 
 .img-flex {
   display: block;
   width: 100%;
-  max-height: 500px;
 }
 
 p {
